cluster/home/traefik-world/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-world-dashboard
  namespace: traefik-world
  annotations:
    kubernetes.io/ingress.class: traefik-world
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-world.local.cjsolsen.com`)
      kind: Rule
      middlewares:
        - name: traefik-world-dashboard-basicauth
          namespace: traefik-world
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-world-cjsolsen-com-tls
